infra/k8s/finances-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finances-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finances
  template:
    metadata:
      labels:
        app: finances
    spec:
      containers:
        - name: finances
          image: deanrtaylor/finances
---
apiVersion: v1
kind: Service
metadata:
  name: finances-srv
spec:
  selector:
    app: finances
  ports:
    - name: finances
      protocol: TCP
      port: 3000
      targetPort: 3000
