infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi', #hb stands for heartbeat checks each client is still running
              '5s',
              '-hbt', #max response time
              '5s',
              '-hbf', #max failed responses until it considers the listener as shut down
              '1',
              '-SD',
              '-cid', #clusterid
              'ticketing',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
